# statlog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
statlog/: CMakeLists.txt
statlog/include/statlog/: statlog.hpp
statlog/include/statlog/formatter/: formatter.hpp  pattern.hpp  token.hpp
statlog/include/statlog/logger/: async_logger.hpp  level.hpp  logger.hpp  sync_logger.hpp
statlog/include/statlog/platform/: file.hpp  os.hpp  stdout.hpp  time.hpp
statlog/include/statlog/sink/: file_sink.hpp  sink.hpp  stdout_sink.hpp
statlog/include/statlog/utility/: buffer.hpp  inline_vector.hpp  storage_units.hpp  thread_pool.hpp
statlog/src/: main.cpp
tests/: CMakeLists.txt  main.cpp
